# uyqur-ai

./: .env.example  .gitignore  FIXES_APPLIED.md  README copy.md  README.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml  setup.py  wrangler copy.toml  wrangler.toml
backend/migrations/: 001_initial_schema.sql  002_reporting_and_rpc.sql  003_seed_settings.sql
backend/python_modules/fastapi-0.135.3.dist-info/: RECORD
backend/python_modules/httpx-0.28.1.dist-info/: RECORD
backend/scripts/: bootstrap_admin.py
backend/src/: bot.py  entry.py
backend/src/app/: __init__.py  config.py  constants.py  dependencies.py  entry.py  main.py
backend/src/app/models/: domain.py  dto.py  enums.py
backend/src/app/repositories/: __init__.py  admin_repository.py  agent_repository.py  audit_repository.py  base.py  customer_repository.py  group_repository.py  kb_repository.py  message_repository.py  setting_repository.py  stats_repository.py  ticket_repository.py
backend/src/app/routes/: admin_agents.py  admin_audit.py  admin_auth.py  admin_groups.py  admin_kb.py  admin_settings.py  admin_stats.py  admin_tickets.py  health.py  webhook.py
backend/src/app/services/: agent_service.py  audit_service.py  auth_service.py  (+9 more)
backend/src/uyqur_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: fakes.py  test_admin_auth_routes.py  test_auth_service.py  test_auto_reply_service.py  test_bot_flow.py  test_config.py  test_ticket_service.py
backend/uyqur_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+44 files in other folders)
